syntax = "proto3";

package proto;

service TripService {
    rpc getAllTripByUserId (GetAllTripByUserIdRequest) returns (GetAllTripByUserIdResponse);
    rpc createTripPlan (createTripPlanRequest) returns (createTripPlanResponse);
    rpc createTripPlanByArchiveId (CreateTripPlanByArchiveIdRequest) returns (createTripPlanResponse);
    rpc getAllTripByParticipateId (GetAllTripByUserIdRequest) returns (GetAllTripByUserIdResponse);
    rpc getTripDetailById (GetTripDetailByIdRequest) returns (GetTripDetailByIdResponse);
}
// trip plan message 

message Coordinate {
    string latitude = 1;
    string longtitude = 2;
    string latitudeDelta = 3;
    string longtitudeDelta = 4;
}

message Places {
    string name = 1;
    string province = 2;
    Coordinate coodinate = 3;
}

message Place {
    string _id = 1;
    string name = 2;
    string placeId = 3;
    string phone = 4;
    string website = 5;
    map<string, string> operating_hours = 6;
    string thumbnail = 7;
    repeated string images = 8;
    double latitude = 9;
    double longitude = 10;
    double latitudeDelta = 11;
    double longitudeDelta = 12;
    double rating = 13;
    string category = 14;
    int32 reviews = 15;
    int32 viewCount = 16;
    map<string, bool> service_options = 17;
    string province = 18;
    string city = 19;
  }

message TripPlan {
    string authorId = 1;
    string title = 2;
    string startDate = 3;
    string endDate = 4;
    string vehicle = 5;
    repeated string provinces = 6;
    repeated Participates participate = 8;
}

message Trip {
  string _id = 1;
  string authorId = 2;
  string title = 3;
  string startDate = 4;
  string endDate = 5;
  string vehicle = 6;
  repeated string provinces = 7;
  repeated Place places = 8;
  int32 viewCount = 9;
    bool isDraft = 10;
    bool isPublish = 11;
    repeated Participates participates = 12;
}

 message Participates {
  string id = 1;
  string username = 2;
  string avatarUrl = 3;
}

// get all trip by user id
message GetAllTripByUserIdRequest {
    string userId = 1;
}

message GetAllTripByUserIdResponse {
    repeated Trip data = 1;
}
//  create trip plan

message createTripPlanRequest {
    string authorId = 1;
    string title = 2;
}

message createTripPlanResponse {
    Trip data = 1;
}

message CreateTripPlanByArchiveIdRequest {
    Participates author = 1;
    string title = 2;
    string archiveId = 3;
    repeated Participates participates = 4;
}

message GetTripDetailByIdRequest {
  string tripId = 1;
}
message GetTripDetailByIdResponse {
  Trip data = 1;
}